Consider typing progress even with closed typing command

base on: https://chromium-review.googlesource.com/c/588874/

WIP: Need to convert https://jsfiddle.net/ruxsxc74/1/ into a regression test.

Bug: 749934
Change-Id: I426392adf69c30803a5c6de475680c2c9d55cfc5